<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/resources_tab"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/resources_tab">
        <menu>
        	<item                
                android:id = "@+id/action_definitions"
                android:title = "@string/action_definitions"/>
            <item                
                android:id = "@+id/action_polyions"
                android:title = "@string/action_polyions"/>
         	<item                
                android:id = "@+id/action_constants"
                android:title = "@string/action_constants"/>
         <!--<item                
                android:id = "@+id/action_equations"
                android:title = "@string/action_equations"/> -->
             <item                
                android:id = "@+id/action_activitySeries"
                android:title = "@string/action_activitySeries"/>
        </menu>
    </item>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon = "@drawable/ic_action_settings"
        android:title="@string/action_settings"/>

</menu>
