<ScrollView
  	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
  	android:layout_width = "fill_parent"
  	android:layout_height = "fill_parent">
	
	<LinearLayout
        android:orientation = "vertical"
        android:layout_width = "fill_parent"
        android:layout_height = "wrap_content"
    >
	   <TextView
          android:id = "@+id/about_app_name"
          android:text = "@string/app_name"
          style = "@style/inputBox"
        />
        
        <TextView
          android:id = "@+id/about_app_version"
          style = "@style/answerBox"
        />

    	<TextView
		  android:id = "@+id/about_app_developer"
		  android:text = "@string/about_app_developer"
		  style = "@style/firstBox"
		/>

    	<TextView
		  android:id = "@+id/about_release_info"
		  android:text = "@string/about_release_info"
		  style = "@style/secondBox"
		/>
    		
    	<TextView
		  android:id = "@+id/about_about_chemify"
		  android:text = "@string/about_about_chemify"
		  style = "@style/firstBox"
		/>
    	
    	<TextView
		  android:id = "@+id/about_donation_line"
		  android:text = "@string/about_donation_line"
		  style = "@style/secondBox"
		/>
    	
    	<TextView
		  android:id = "@+id/about_copyright"
		  android:text = "@string/about_copyright"
		  style = "@style/firstBox"
		/>
	    
	</LinearLayout>

</ScrollView>